--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
     - "3.5"
 script: make test
 install:
-    - pip install -e .
+    - pip install -r requirements.txt
 notifications:
     email: false
