--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,15 @@ python:
 script: make test
 install:
     - pip install -r requirements.txt
+    - pip install $DJANGO
 notifications:
     email: false
+env:
+  matrix:
+    - DJANGO='django>=1.8,<1.9'
+    - DJANGO='django>=1.9,<1.10'
+    - DJANGO='--upgrade --pre django'
+matrix:
+  fast_finish: true
+  allow_failures:
+    - env: DJANGO='upgrade --pre django'
